--- a/Expense-Tracker-App/index.html
+++ b/Expense-Tracker-App/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f06ee4b06e.js" crossorigin="anonymous"></script>
-    <title>Expense Tracker App</title>
+    <title>Xpenso</title>
   </head>
   <body>
     <div id="root"></div>
